# Resume-Screening-Env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh
data/: job_descriptions.json  resumes.json
env/: environment.py  grader.py  reward.py  tasks.py
models/: action.py  observation.py  reward.py
server/: app.py
