[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-screening-env"
version = "1.0.0"
description = "A real-world RL environment for resume screening and candidate ranking"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "openai==1.52.0",
    "httpx==0.27.2",
    "requests==2.31.0",
    "openenv>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.envs"]
resume-screening-env = "env.environment:ResumeScreeningEnv"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "models*", "data*", "server*"]